# wntr-quantum

./: .coverage.nico-VirtualBox.6672.XWOiABlx  .coverage.nico-VirtualBox.6699.XSRKmcbx  .gitignore  CITATION.cff  CONTRIBUTING.md  NOTICE  README.dev.md  README.md  next_steps.md  project_setup.md  pyproject.toml  sonar-project.properties  tox.ini
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml  coverage.yml  documentation.yml
docs/: Makefile  conf.py  index.rst  make.bat
docs/notebooks/: aequbols.py  design_pipe_diameter.ipynb  design_pipe_diameter_DW.ipynb  design_pipe_diameter_own_sampler.ipynb  design_pipe_diameter_own_sampler_refac.ipynb  dw_approximation.ipynb  en7mVlUM  enDxgyox  enO9UF5m  enOsOEwM  enrIutMf  envx2hn0  epanet.ipynb  epanet.py  epanet_hhl.ipynb  epanet_qubols.ipynb  epanet_vqls.ipynb  getting_stared.ipynb  hhl_Net0.ipynb  hhl_Net0_quantum_inspire.ipynb  hhl_Net1Loop.ipynb  hhl_Net2loops.ipynb  hhl_solver_Net1Loops.ipynb  hhl_solver_Net2Loops.ipynb  noisy_vqls.ipynb  noisy_vqls_solver.ipynb  pipe_break.ipynb  plot_test_qubo_designer.ipynb  plot_test_qubo_solver.ipynb  qubo_Net1Loops.ipynb  qubo_Net2Loops.ipynb  qubo_poly_solver.ipynb  qubo_poly_solver_2loops_cm.ipynb  qubo_poly_solver_2loops_dw.ipynb  qubo_poly_solver_CM.ipynb  qubo_poly_solver_Net0.ipynb  qubo_poly_solver_Net0_refac.ipynb  qubols.ipynb  qubols_solver.ipynb  solutions.pkl  (+17 more)
docs/notebooks/linear_solver/: hhl_solver.ipynb  noisy_vqls_solver.ipynb  qubols_solver.ipynb  vqls_solver.ipynb
docs/notebooks/net0_data/: energies.pkl  plot_test_qubo_solver.ipynb  solutions.pkl
docs/notebooks/net2loops_data/: encoded_reference_solutions.pkl  energies.pkl  plot_test_qubo_solver.ipynb  solutions.pkl
docs/notebooks/networks/: Hanoi.inp  Net0.inp  Net0_CM.inp  Net0_HW.inp  Net1Loops.inp  Net1Loops_CM.inp  Net1Loops_CM_original_values.inp  Net1_scenario1.inp  Net2Loops.inp  Net2LoopsCM.inp  Net2LoopsCMflat.inp  Net2LoopsDW.inp  Net2LoopsDWflat.inp  Net2LoopsFlat.inp  Net2Loops_hhl_settings.inp  Net2Loops_modified.inp  Net3Loops.inp
docs/notebooks/newton_raphson/: qnr_hhl.ipynb
docs/notebooks/newton_raphson_Net0/: qnr_hhl.ipynb  qnr_qubols.ipynb  qnr_vqls.ipynb  qnr_vqls_noise.ipynb  utils.py
docs/notebooks/newton_raphson_Net2Loops/: qnr_qubols.ipynb  qnr_vqls.ipynb
docs/notebooks/pipe_diameter_optimization/: design_pipe_diameter.ipynb
docs/notebooks/qnr_hhl/: hhl_Net0.ipynb  hhl_Net1Loop.ipynb
docs/notebooks/qnr_qubols/: qubo_Net1Loops.ipynb  qubo_poly_solver.ipynb
docs/notebooks/qnr_vqls/: vqls_Net1.ipynb  vqls_Net1Loops.ipynb  vqls_Net2Loops_D-W.ipynb  vqls_solver_Net1.ipynb  vqls_solver_Net1Loops.ipynb  vqls_solver_Net3Loops.ipynb
docs/notebooks/qubo_polynomial_solver/: Net0.ipynb  Net0_OptmizedSchedule.ipynb  dw_approximation.ipynb
docs/notebooks/sandbox/: epanet.py  qubo_poly_solver_Net0.ipynb  qubo_poly_solver_Net2loops.ipynb  qubo_solver.py
docs/notebooks/trash/: aequbols.py  epanet.ipynb  epanet.py  epanet_qubo_poly_solver.ipynb  epanet_qubonetwork.ipynb  getting_stared.ipynb  poly_brute_force.py  qubo_solver.py  qubols.ipynb  temp.inp  temp.rpt  vqls.ipynb  wntr_design.ipynb  wntr_qubo_poly)dixcrete_res.ipynb  wntr_qubo_poly.ipynb  wntr_qubo_poly_linear_system.ipynb
examples/: poly_qubo_examples.py  qubo_examples.py  vqls_examples.py
stability_tests/: README.md
stability_tests/hhl/demands/: Dataset_Generator.py  slurm-8183232.out
stability_tests/hhl/diameters/: Dataset_Generator.py  slurm-8183244.out
stability_tests/hhl/length/: Dataset_Generator.py  slurm-8213612.out
tests/: test_aml_quantum_newton_solver.py  test_my_module.py  test_network_simulator_solver.py  test_network_solver.py  test_poly_qubo_network_simulator.py  test_solver.py
tests/networks/: Net0.inp  Net0_DW.inp
wntr_quantum/: __init__.py  my_module.py
wntr_quantum/design/: qubo_pipe_diam.py
wntr_quantum/epanet/: toolkit.py  utils.py
wntr_quantum/linear_solver/: __init__.py
wntr_quantum/sampler/: simulated_annealing.py  simulated_annealing_parallel.py
wntr_quantum/scenario/: chezy_manning.py  darcy_weisbach.py  darcy_weisbach_fit.py  network_design_qubo.py  network_qubo.py
wntr_quantum/sim/: __init__.py  core.py  core_qubo.py  epanet.py  hydraulics.py  qubo_hydraulics.py  qubo_polynomial_solver.py  results.py  solvers.py
(+35 files in other folders)
